// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CBreadcrumbItem customize 1`] = `
<div>
  <li
    aria-current="page"
    class="breadcrumb-item active bazinga"
  >
    Test
  </li>
</div>
`;

exports[`loads and displays CBreadcrumbItem component 1`] = `
<div>
  <li
    class="breadcrumb-item"
  >
    Test
  </li>
</div>
`;
